@@ -4,6 +4,7 @@ use strict;
 use warnings;
 
 use Digest::SHA;
+use English qw(-no_match_vars);
 use File::Basename;
 use File::Path qw(mkpath);
 use File::Glob;
@@ -71,53 +72,76 @@ sub download {
 
     die unless $self->{mirrors};
 
-    my $mirrorList =  $self->{mirrors};
+    my @peers;
+    if ($self->{p2p}) {
+        FusionInventory::Agent::Task::Deploy::P2P->require();
+        if ($EVAL_ERROR) {
+            $self->{logger}->debug("can't enable P2P: $EVAL_ERROR")
+        } else {
+            my $p2p = FusionInventory::Agent::Task::Deploy::P2P->new(
+                logger => $self->{logger}
+            );
+            eval {
+                @peers = $p2p->findPeers(62354);
+            };
+            $self->{logger}->debug("failed to enable P2P: $EVAL_ERROR")
+                if $EVAL_ERROR;
+        }
+    };
 
+    my $lastPeer;
+    PART: foreach my $sha512 (@{$self->{multiparts}}) {
+        my $path = $self->getPartFilePath($sha512);
+        if (-f $path) {
+            next PART if $self->_getSha512ByFile($path) eq $sha512;
+        }
+        File::Path::mkpath(dirname($path));
 
-    my $p2pHostList;
-
-MULTIPART: foreach my $sha512 (@{$self->{multiparts}}) {
-        my $partFilePath = $self->getPartFilePath($sha512);
-        File::Path::mkpath(dirname($partFilePath));
-        if (-f $partFilePath) {
-                next MULTIPART if $self->_getSha512ByFile($partFilePath) eq $sha512;
+        # try to download from the same peer as last part, if defined
+        if ($lastPeer) {
+            my $success = $self->_download($lastPeer, $sha512, $path);
+            next PART if $success;
         }
 
-        eval {
-            if ($self->{p2p} && (ref($p2pHostList) ne 'ARRAY') && FusionInventory::Agent::Task::Deploy::P2P->require) {
-                $p2pHostList = FusionInventory::Agent::Task::Deploy::P2P::findPeer(62354, $self->{logger});
+        # try to download from peers
+        foreach my $peer (@peers) {
+            my $success = $self->_download($peer, $sha512, $path);
+            if ($success) {
+                $lastPeer = $peer;
+                next PART;
             }
-        };
-        $self->{logger}->debug("failed to enable P2P: $@") if $@;
+        }
 
-
-        my $lastGood;
-        my %remote = (p2p => $p2pHostList, mirror => $mirrorList);
-        foreach my $remoteType (qw/p2p mirror/)  {
-            foreach my $mirror ($lastGood, @{$remote{$remoteType}}) {
-                next unless $mirror;
-
-                next unless $sha512 =~ /^(.)(.)/;
-                my $sha512dir = $1.'/'.$1.$2.'/';
-
-                $self->{logger}->debug($mirror.$sha512dir.$sha512);
-
-                my $request = HTTP::Request->new(GET => $mirror.$sha512dir.$sha512);
-                my $response = $self->{client}->request($request, $partFilePath);
-
-                if ($response && ($response->code == 200) && -f $partFilePath) {
-                    if ($self->_getSha512ByFile($partFilePath) eq $sha512) {
-                        $lastGood = $mirror if $remoteType eq 'p2p';
-                        next MULTIPART;
-                    }
-                    $self->{logger}->debug("sha512 failure: $sha512");
-                }
-    # bad file, drop it
-                unlink($partFilePath);
-            }
+        # try to download from mirrors
+        foreach my $mirror (@{$self->{mirrors}}) {
+            my $success = $self->_download($mirror, $sha512, $path);
+            next PART if $success;
         }
     }
+}
 
+sub _download {
+    my ($self, $source, $sha512, $path) = @_;
+
+    return unless $sha512 =~ /^(.)(.)/;
+    my $sha512dir = $1.'/'.$1.$2.'/';
+
+    my $url = $source.$sha512dir.$sha512;
+    $self->{logger}->debug($url);
+
+    my $request = HTTP::Request->new(GET => $url);
+    my $response = $self->{client}->request($request, $path);
+
+    return if $response->code != 200;
+    return if ! -f $path;
+
+    if ($self->_getSha512ByFile($path) ne $sha512) {
+        $self->{logger}->debug("sha512 failure: $sha512");
+        unlink($path);
+        return;
+    }
+
+    return 1;
 }
 
 sub filePartsExists {
